database/postgres_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flask-app-access
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      role: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: flask-app
      ports:
        - protocol: TCP
          port: 5432
